Fix navigation team link name

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,13 +16,13 @@ teams:
       url: /teams/red-bull/
     - title: "フェラーリ"
       url: /teams/ferrari/
-    - title: "フォースインディア"
+    - title: "フォース・インディア"
       url: /teams/force-india/
     - title: "ウィリアムズ"
       url: /teams/williams/
     - title: "マクラーレン"
       url: /teams/mclaren/
-    - title: "トロロッソ"
+    - title: "トロ・ロッソ"
       url: /teams/toro-rosso/
     - title: "ハース"
       url: /teams/haas/
