--- a/_data/races.yml
+++ b/_data/races.yml
@@ -1,24 +1,28 @@
 - date: 2018-01-13
   name: "オーストラリアグランプリ"
-  location: "メルボルン"
+  location: "Melbourne"
   image: /assets/images/races/Melbourne.jpg
   circuit:
     name: "メルボルン・グランプリ・サーキット"
     image: /assets/images/circuits/melbourne.png
     length: 5.303
     laps: 29
+    first_season: 2007
+    races: 2
 - date: 2018-01-27
   name: "モナコグランプリ"
-  location: "モンテカルロ"
+  location: "Monte Carlo"
   image: /assets/images/races/MonteCarlo.jpg
   circuit:
     name: "モンテカルロ市街地コース"
     image: /assets/images/circuits/montecarlo.png
     length: 3.337
     laps: 39
+    first_season: 2007
+    races: 3
 - date: 2018-02-10
   name: "アゼルバイジャングランプリ"
-  location: "バクー"
+  location: "Baku"
   image: /assets/images/races/Baku.jpg
   circuit:
     name: "バクー市街地コース"
@@ -27,28 +31,34 @@
     laps: 26
 - date: 2018-02-24
   name: "スペイングランプリ"
-  location: "バルセロナ"
+  location: "Barcelona"
   image: /assets/images/races/Catalunya.jpg
   circuit:
     name: "シルクイート・デ・バルセロナ=カタルーニャ"
     image: /assets/images/circuits/catalunya.png
     length: 4.655
     laps: 33
+    first_season: 2009
+    races: 1
 - date: 2018-03-10
   name: "イタリアグランプリ"
-  location: "モンツァ"
+  location: "Monza"
   image: /assets/images/races/Monza.jpg
   circuit:
     name: "アウトドーロモ・ナツィオナーレ・ディ・モンツァ"
     image: /assets/images/circuits/monza.png
     length: 5.793
     laps: 27
+    first_season: 2007
+    races: 2
 - date: 2018-03-24
   name: "ベルギーグランプリ"
-  location: "スパ=フランコルシャン"
+  location: "Spa-Francorchamps"
   image: /assets/images/races/SpaFrancorchamps.jpg
   circuit:
     name: "シルキュイ・ド・スパ=フランコルシャン"
     image: /assets/images/circuits/spafrancorchamps.png
     length: 7.004
     laps: 22
+    first_season: 2007
+    races: 3
